// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenCapturePanelContent properly renders a view with "canvas" layout option 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText emotion-euiText-s"
  >
    <p>
      Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="generated-id-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button"
          data-test-subj="reportModeToggle"
          id="generated-id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <span
                class="euiSwitch__icon"
                data-euiicon-type="cross"
              />
              <span
                class="euiSwitch__icon euiSwitch__icon--checked"
                data-euiicon-type="check"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="generated-id"
        >
          Full page layout
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="generated-id-help-0"
      >
        Remove borders and footer logo
      </div>
    </div>
  </div>
  <button
    class="euiButton emotion-euiButtonDisplay-s-fullWidth-defaultMinWidth-fill-primary"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      Generate Analytical App
    </span>
  </button>
  <hr
    class="euiHorizontalRule emotion-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion emotion-euiAccordion"
    data-test-subj="shareReportingAdvancedOptionsButton"
  >
    <div
      class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button emotion-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
      id="advanced-options"
      inert=""
      role="group"
      style="block-size: 0;"
    >
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiText emotion-euiText-s"
        >
          <p>
            Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger emotion-euiPanel-none-s-danger-euiCallOut"
          data-test-subj="shareReportingUnsavedState"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-danger"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="warning"
            />
            Unsaved work
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-xs-euiTextColor-default"
          >
            <div
              class="euiText emotion-euiText-s"
            >
              <p>
                Save your work before copying this URL.
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenCapturePanelContent properly renders a view with "print" layout option 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText emotion-euiText-s"
  >
    <p>
      Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="generated-id-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button"
          data-test-subj="usePrintLayout"
          id="generated-id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <span
                class="euiSwitch__icon"
                data-euiicon-type="cross"
              />
              <span
                class="euiSwitch__icon euiSwitch__icon--checked"
                data-euiicon-type="check"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="generated-id"
        >
          Optimize for printing
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="generated-id-help-0"
      >
        Uses multiple pages, showing at most 2 visualizations per page
      </div>
    </div>
  </div>
  <button
    class="euiButton emotion-euiButtonDisplay-s-fullWidth-defaultMinWidth-fill-primary"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      Generate Analytical App
    </span>
  </button>
  <hr
    class="euiHorizontalRule emotion-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion emotion-euiAccordion"
    data-test-subj="shareReportingAdvancedOptionsButton"
  >
    <div
      class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button emotion-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
      id="advanced-options"
      inert=""
      role="group"
      style="block-size: 0;"
    >
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiText emotion-euiText-s"
        >
          <p>
            Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger emotion-euiPanel-none-s-danger-euiCallOut"
          data-test-subj="shareReportingUnsavedState"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-danger"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="warning"
            />
            Unsaved work
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-xs-euiTextColor-default"
          >
            <div
              class="euiText emotion-euiText-s"
            >
              <p>
                Save your work before copying this URL.
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenCapturePanelContent renders the default view properly 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText emotion-euiText-s"
  >
    <p>
      Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <button
    class="euiButton emotion-euiButtonDisplay-s-fullWidth-defaultMinWidth-fill-primary"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      Generate Analytical App
    </span>
  </button>
  <hr
    class="euiHorizontalRule emotion-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion emotion-euiAccordion"
    data-test-subj="shareReportingAdvancedOptionsButton"
  >
    <div
      class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button emotion-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
      id="advanced-options"
      inert=""
      role="group"
      style="block-size: 0;"
    >
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiText emotion-euiText-s"
        >
          <p>
            Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger emotion-euiPanel-none-s-danger-euiCallOut"
          data-test-subj="shareReportingUnsavedState"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-danger"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="warning"
            />
            Unsaved work
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-xs-euiTextColor-default"
          >
            <div
              class="euiText emotion-euiText-s"
            >
              <p>
                Save your work before copying this URL.
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
